     ASSISTANT   user requested assistant by pressing '*' for assistant
     TIMEOUT     user pressed nothing and Directory stopped waiting
     HANGUP      user's channel hung up
     SELECTED    user selected a user from the directory and is routed
     USEREXIT    user pressed '#' from the selection prompt to exit
     FAILED      directory failed in a way that wasn't accounted for. Dang.

Say
--------------------------
 * If a channel variable SAY_DTMF_INTERRUPT is present on a channel and set
   to 'true' (case insensitive), then any Say application (SayNumber,
   SayDigits, SayAlpha, SayAlphaCase, SayUnixTime, and SayCounted) will
   anticipate DTMF. If DTMF is received, these applications will behave like
   the background application and jump to the received extension once a match
   is established or after a short period of inactivity.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 11 to Asterisk 12 --------------------
------------------------------------------------------------------------------

Overview
------------------

Asterisk 12 is a standard release of the Asterisk project. As such, the
focus of development for this release was on core architectural changes and
major new features. This includes:
 * A more flexible bridging core based on the Bridging API
 * A new internal message bus, Stasis
 * Major standardization and consistency improvements to AMI
 * Addition of the Asterisk RESTful Interface (ARI)
 * A new SIP channel driver, chan_pjsip
In addition, as the vast majority of bridging in Asterisk was migrated to the
Bridging API used by ConfBridge, major changes were made to most of the
interfaces in Asterisk. This includes not only AMI, but also CDRs and CEL.

Specifications have been written for the affected interfaces. These
specifications are available on the Asterisk wiki:
 * AMI - https://wiki.asterisk.org/wiki/x/dAFRAQ